antlr-demo/src/main/java/com/rock/antlr/demo/chapter6/csv/CSV.g4
grammar CSV;

file  : hdr row+ ;
hdr : row ;
row : field (',' field)* '\r'? '\n' ;

field : TEXT         #text
      | STRING       #string
      |              #empty
      ;


TEXT : ~[,\n\r"]+ ;
STRING : '"' ('""'|~'"')* '"' ;
